# zuu

./: .gitattributes  .gitignore  .gitmodules  .ignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  WORKSPACE  ZWL.txt  ZWLL.txt  build-node-sync.sh  update_submodules.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs-about-free2z.yml  ts-react-free2z.yml  zuuallet.yml  zuuli.yml
.github/workflows/docs/: about-free2z.yml
docs/: .gitignore  .gitigore  Gemfile  PARALLEL-AGENTS.md  README.md  SUBMODULES.md  _config.yml  create-your-first-zpage.md  index.md  membership.md  search.html  what-are-zpages.md
docs/_includes/: breadcrumbs.html  footer.html  nav.html  searchbox.html
docs/_layouts/: base.html
docs/about-free2z/: .gitignore  BUILD.bazel  OUTLINE.md  README.md  docusaurus.config.js  package-lock.json  package.json  tsconfig.json
docs/about-free2z/docs/consulting/: _category_.json  client-tools.md  creator-tools.md  index.md
docs/about-free2z/docs/for-creators/: 01-creating-a-profile.md  02-creating-a-zpage.md  03-free2z-live.md  AI-content-generation.md  _category_.json  boosting-with-2Zs.md  index.md  uploads.md
docs/about-free2z/docs/for-supporters/: _category_.json  donating-with-2Zs.md  donating-with-zcash.md  free2z-live.md  index.md  subscriptions.md
docs/about-free2z/docs/getting-started/: 01-quickstart.md  02-profile.md  03-tuzis.md  04-zpages.md  05-livestreams.md  _category_.json  index.md
docs/about-free2z/docs/legal/: 01-terms-of-service-agreement.md  02-privacy-policy.md  03-user-content-agreement.md  04-crypto-contribution-guidelines.md  05-token-sale-and-usage-terms.md  06-revenue-share-agreement.md  07-token-redemption-policy.md  08-aml-kyc-policy.md  09-ip-rights-policy.md  10-risk-disclosure-statements.md  11-terms-of-sale.md  _category_.json
docs/about-free2z/docs/overview/: _category_.json  core-values.md  index.md  key-features.md  why-choose-free2z.md
docs/about-free2z/docs/privacy-and-security/: 01-for-anons.md  02-zcash.md  _category_.json  index.md
docs/about-free2z/docs/revenue-sharing/: _category_.json  index.md
docs/about-free2z/src/components/: Header3d.tsx
docs/about-free2z/src/components/HomepageFeatures/: index.tsx
docs/about-free2z/src/css/: custom.css
docs/about-free2z/src/pages/: index.module.css  index.tsx
docs/devops/: disk-resize-on-the-fly.md
docs/lightwalletd/: README.md  experimental-mainnet.md
docs/mobile/: README.md
docs/mobile/android/: MacOS.md  README.md  debian.md
docs/notes/wasm/: NOTES.md
docs/zcashd/: README.md  debian11.md  resize-disk.md
docs/zcashd/wallet/: start.md
docs/zcg/: grant-form-copy.txt  grant-template.md
docs/zcg/kairos/: proposal.md
docs/zecwallet-lite/: README.md
docs/zkosystem/: comparison.md
docs/zuuli/: DEV.md
ex/ZuuliMobile/: app.json  package.json
ex/ZuuliMobile/android/: settings.gradle
ex/ZuuliMobile/ios/: Podfile
ex/capacitor/f2z/: README.md  ionic.config.json  package.json
ex/grpcweb/: README.md  envoy-demo.yaml  envoy-old.yaml  envoy.yaml  package-lock.json  package.json
ex/grpcweb/src/: App.tsx
ex/rtmp/: SETUP.md
ex/rtmp/conf/: django.yaml  nginx.yaml  playbook.yaml
ex/wasm/hello-wasm/: Cargo.toml  README.md  index.html
ex/websites/signupz/: README.md  requirements.txt  simple-infra.md
ex/websites/timeline/: index.html
ex/websites/timelines/: README.md  deploy.sh  requirements.txt  timeline.json
ex/zuu-neon/: Cargo.toml  README.md  package-lock.json  package.json
ex/zuu-neon/src/: index.html  main.js  preload.js
ex/zuu-neon/src/electron/: main.js  preload.js
ex/zuu-neon/src/wallet/zwll/: README.md  zwllib.js
ex/zuul.free2z.cash/: .gitignore  README.md  requirements.txt
ex/zuul.free2z.cash/conf/: README.md
ex/zuuli/: .gitignore  README.md  build-node-sync.sh  package-lock.json  package.json
ex/zuuli-mobile/: App.js  App.tsx  README.md  app.json  package-lock.json  package.json
ex/zuuli-mobile/components/: AppHeader.tsx
ex/zuuli-mobile/rust/: Cargo.toml
ex/zuuli/public/: index.html  manifest.json
ex/zuuli/src/: AccountDetail.tsx  App.tsx  Intro.tsx  Receive.tsx  Send.tsx  Transactions.tsx  (+1 more)
langchain/zcash/: rag_fusion.py
langchain/zebra/: .gitignore  README.md  requirements.txt  store.py  util.py  zebra_chain.py
sh/: git-large.sh
wallet/f2z/: capacitor.config.ts  package-lock.json
wallet/plugins/tauri-plugin-zcash/: CLAUDE.md  Cargo.toml  README.md  build.rs
wallet/plugins/tauri-plugin-zcash/permissions/: default.toml
wallet/plugins/tauri-plugin-zcash/permissions/autogenerated/: reference.md
wallet/plugins/tauri-plugin-zcash/permissions/autogenerated/commands/: create_account.toml  create_wallet.toml  delete_wallet.toml  ensure_sapling_params.toml  execute_send.toml  get_account_balance.toml  get_seed_phrase.toml  get_spending_key.toml  get_sync_status.toml  get_transaction_history.toml  get_unified_address.toml  get_viewing_key.toml  get_wallet_status.toml  list_accounts.toml  list_wallets.toml  parse_payment_uri.toml  propose_send.toml  propose_send_all.toml  rename_wallet.toml  restore_wallet.toml  send_transaction.toml  set_lightwalletd_url.toml  sign_challenge.toml  start_sync.toml  stop_sync.toml  switch_wallet.toml  unlock_wallet.toml  validate_address.toml
wallet/plugins/tauri-plugin-zcash/permissions/schemas/: schema.json
wallet/plugins/tauri-plugin-zcash/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
wallet/plugins/tauri-plugin-zcash/src/wallet/: accounts.rs  cache.rs  client.rs  history.rs  keychain.rs  keys.rs  manifest.rs  mod.rs  send.rs  storage.rs  sync.rs
wallet/zuuallet/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
wallet/zuuli/: .gitignore  CLAUDE.md  README.md  STATUS.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
wallet/zuuli/src-tauri/: Cargo.toml  tauri.conf.json
wallet/zuuli/src-tauri/capabilities/: default.json
wallet/zuuli/src-tauri/src/: lib.rs  main.rs  oauth.rs
zuu/zuu-neon/: Cargo.toml  README.md
(+825 files in other folders)
