[package]
name = "zuu-neon"
version = "0.1.0"
description = "Zcash Desktop UUallet"
authors = ["Skylar Saveland"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zecwalletlitelib = { git = "https://github.com/zingolabs/zecwalletlitelib", branch = "main" }
# zingolib = { git = "https://github.com/zingolabs/zingolib", branch = "dev" }
# zecwalletlitelib = { path = "../../zecwallet-light-cli/lib" }
# Go with what is on people's devices for now
zecwalletlitelib = { git = "https://github.com/adityapk00/zecwallet-light-cli", rev = "b1880fd96a176dac0f5e7b7a15976d0776140b7a" }
# zecwalletlitelib = { git = "https://github.com/adityapk00/zecwallet-light-cli", rev = "47fc08026fb3cbc3e83c8b7bd3bf509c0c02d29b" }

lazy_static = "1.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
