[package]
name = "tauri-plugin-zcash"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
description = "Tauri plugin for Zcash wallet operations"
links = "tauri-plugin-zcash"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
# We use `tonic::transport::Channel` directly (see wallet/client.rs) to connect to
# lightwalletd over TLS, so declare those features here rather than relying on them
# leaking in via zcash_client_backend's feature unification (which breaks clean builds).
tonic = { version = "0.14", default-features = false, features = ["transport", "tls-webpki-roots"] }
bip0039 = "0.12"
secrecy = "0.8"
rand = "0.8"
tracing = "0.1"
# `array` for rusqlite::vtab::array (see wallet/storage.rs) — the `array` feature
# is what actually gates that module (it implies `vtab` + `modern_sqlite`).
# Declared explicitly for the same reason as tonic above: don't rely on another
# crate's feature unification to turn it on, or clean builds break.
rusqlite = { version = "0.37", features = ["bundled", "array"] }
zip32 = { version = "0.2", default-features = false }
nonempty = "0.11"
async-trait = "0.1"
rustls = { version = "0.23", features = ["ring"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
uuid = { version = "1", features = ["v4"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
# Real Zcash transparent-address message signing ("ZUULI Zcash Login v1"), so the
# backend can verify with zcashd `verifymessage`. All cross-platform → [dependencies].
# secp256k1 is already in the tree (via librustzcash); we only add the `recovery`
# feature here for the 65-byte recoverable signature zcashd emits/accepts.
secp256k1 = { version = "0.29", features = ["recovery"] }
ripemd = "0.1"        # RIPEMD160 half of HASH160 for the P2PKH address
bs58 = { version = "0.5", features = ["check"] }  # base58check for the t-address
base64 = "0.22"       # standard padded base64 for the signature

# Zcash crates — path deps into the z/zcash/librustzcash submodule. These MUST
# live in [dependencies] (cross-platform). They were previously under the macOS
# target table below, which made them macOS-only: on Linux/Windows the whole
# zcash stack vanished from the graph and every build failed with
# `unresolved import zcash_protocol`. macOS-only builds never noticed.
zcash_client_backend = { path = "../../../z/zcash/librustzcash/zcash_client_backend", features = ["lightwalletd-tonic", "lightwalletd-tonic-transport", "lightwalletd-tonic-tls-webpki-roots", "sync", "orchard", "transparent-inputs"] }
zcash_client_sqlite = { path = "../../../z/zcash/librustzcash/zcash_client_sqlite", features = ["orchard", "transparent-inputs"] }
zcash_primitives = { path = "../../../z/zcash/librustzcash/zcash_primitives" }
zcash_proofs = { path = "../../../z/zcash/librustzcash/zcash_proofs", features = ["local-prover", "download-params", "multicore"] }
zcash_keys = { path = "../../../z/zcash/librustzcash/zcash_keys", features = ["orchard", "sapling", "transparent-key-encoding"] }
zcash_protocol = { path = "../../../z/zcash/librustzcash/components/zcash_protocol" }
zcash_address = { path = "../../../z/zcash/librustzcash/components/zcash_address" }
zip321 = { path = "../../../z/zcash/librustzcash/components/zip321" }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
tauri-build = "2"

# ---------------------------------------------------------------------------
# Build profiles. DO NOT DELETE — see the identical blocks in
# wallet/zuuli/src-tauri/Cargo.toml and wallet/zuuallet/src-tauri/Cargo.toml.
#
# This crate is its own workspace root, so these profiles apply when it is built
# or tested standalone (`cargo test -p tauri-plugin-zcash` from this directory).
# When it is consumed as a path dep by zuuli/zuuallet, THEIR profiles win — which
# is why the same block is duplicated there.
#
# Why: at Cargo's default `opt-level = 0`, the whole Zcash crypto stack
# (sapling-crypto, orchard, halo2_proofs, bls12_381, pasta_curves, group/ff,
# incrementalmerkletree / shardtree, blake2b_simd, zcash_note_encryption) runs
# unoptimized. Trial decryption, Pedersen hashing and shardtree inserts are then
# 20-100x slower than release and chain sync crawls. Standard Zashi /
# zcash-devtool pattern: optimize dependencies, keep our own crates cheap to
# rebuild.
# ---------------------------------------------------------------------------

[profile.dev]
# Our own crate: unoptimized so incremental rebuilds stay quick and debugging
# (breakpoints, variable inspection) behaves.
opt-level = 0

[profile.dev.package."*"]
# Every dependency — crucially the Zcash crypto stack — gets fully optimized.
# Deps are compiled once and cached, so this costs a single cold build.
opt-level = 3

[profile.dev.build-override]
# Build scripts and proc macros also run at opt-level 0 by default; several
# Zcash deps do real work in build.rs. Cheap win on cold builds.
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
