[package]
name = "zuuli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
description = "ZUULI by 2Z Inc — Zcash-native wallet, AI, livestreaming and articles."

[lib]
name = "zuuli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Native HTTP client used by the frontend (@tauri-apps/plugin-http) to reach the
# free2z backend without browser CORS — powers Login with Zcash and every API call.
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Shared Zcash engine (librustzcash under the hood) — the "zuuallet guts".
tauri-plugin-zcash = { path = "../../plugins/tauri-plugin-zcash" }
# Tiny blocking HTTP server used ONLY for the desktop OAuth loopback capture
# (RFC 8252) — binds 127.0.0.1, serves a single request, then shuts down. Kept
# out of the shared tauri-plugin-zcash crate since it's ZUULI-specific.
tiny_http = "0.12"
